Update and rename 基于MNIST数据集的AutoEncoder.md to README

--- a/AutoEncoder/README
+++ b/AutoEncoder/README
@@ -55,4 +55,4 @@ Epoch: 30       Training Loss: 3.37368929
 
 ### Decoded
 
-详见图片[encoded](https://github.com/linhaowei1/Learning-Learning/blob/main/AutoEncoder/decoded.png)
+详见图片[decoded](https://github.com/linhaowei1/Learning-Learning/blob/main/AutoEncoder/decoded.png)
